--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -1443,14 +1443,28 @@
                 csvContent += dataString;
             });
 
-             // 下載的檔案名稱
-             let fileName = '匯出列表_' + (new Date()).getTime() + '.csv';
-
-             // 建立一個 a，並點擊它
-             let link = document.createElement('a');
-             link.setAttribute('href', 'data:text/csv;charset=utf-8,%EF%BB%BF' + encodeURI(csvContent));
-             link.setAttribute('download', fileName);
-             link.click();
+            // 下載的檔案名稱
+            var d = new Date();
+            var year = d.getFullYear();
+            var month = d.getMonth() + 1;
+            var day = d.getDate();
+            var hour = d.getHours();
+            var minute = d.getMinutes();
+            var second = d.getSeconds();
+            
+            if(month < 10) { month = "0" + month };
+            if(day < 10) { day = "0" + day };
+            if(hour < 10) { hour = "0" + hour };
+            if(minute < 10) { minute = "0" + minute };
+            if(second < 10) { second = "0" + second };
+            
+            let fileName = '匯出列表_' + year + month + day + "_" + hour + minute + second + '.csv';
+            
+            // 建立一個 a，並點擊它
+            let link = document.createElement('a');
+            link.setAttribute('href', 'data:text/csv;charset=utf-8,%EF%BB%BF' + encodeURI(csvContent));
+            link.setAttribute('download', fileName);
+            link.click();
         });
     });
 </script>
