--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/EmployeeConsultList.cshtml
@@ -1192,6 +1192,13 @@
                     $('[data-date=' + dateStr + ']').find('.fc-daygrid-day-events').html('<div class="o-eventBall"></div>');
                 }
             },
+            eventRemove: function (info) {
+                if (window.innerWidth < 1200) {
+                    const dateObj = new Date(info.event.start);
+                    const dateStr = `${dateObj.getFullYear()}-${(dateObj.getMonth() + 1).toString().padStart(2, '0')}-${dateObj.getDate().toString().padStart(2, '0')}`;
+                    $('[data-date=' + dateStr + ']').find('.fc-daygrid-day-events').empty();
+                }
+            },
             eventOrder: ["StatusOrder", "start"],
             // 行事曆資料
             events: dataSource
