--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/ManagerConsultList.cshtml
@@ -175,7 +175,14 @@
                                     <input type="text" class="o-actionbox__input" id="search-table2" placeholder="輸入理專姓名">
                                     <button type="submit" class="o-actionbox__btn o-actionbox__btn--magnifier" data-keyword-submit2></button>                                    
                                 </div>
-                                <button class="o-btn o-btn--primary o-btn--flat o-btn--sm" data-export>匯出列表</button>
+                                <div class="o-actionbox o-actionbox--md u-hidden@lt">
+                                    <button class="o-btn o-btn--primary o-btn--flat o-btn--sm" data-export>匯出列表</button>
+                                </div>
+                            </div>
+                            <div class="l-flex__item u-hidden@dt-only">                                
+                                <div class="o-actionbox o-actionbox--md">
+                                    <button class="o-btn o-btn--primary o-btn--flat o-btn--sm" data-export>匯出列表</button>
+                                </div>
                             </div>
                             <div class="l-flex__item u-right u-hidden@dt-only">
                                 <div class="o-sortingbox">
@@ -1276,6 +1283,13 @@
                     const dateObj = new Date(info.event.start);
                     const dateStr = `${dateObj.getFullYear()}-${(dateObj.getMonth() + 1).toString().padStart(2, '0')}-${dateObj.getDate().toString().padStart(2, '0')}`;
                     $('[data-date=' + dateStr + ']').find('.fc-daygrid-day-events').html('<div class="o-eventBall"></div>');
+                }
+            },
+            eventRemove: function (info) {
+                if (window.innerWidth < 1200) {
+                    const dateObj = new Date(info.event.start);
+                    const dateStr = `${dateObj.getFullYear()}-${(dateObj.getMonth() + 1).toString().padStart(2, '0')}-${dateObj.getDate().toString().padStart(2, '0')}`;
+                    $('[data-date=' + dateStr + ']').find('.fc-daygrid-day-events').empty();
                 }
             },
             eventOrder: ["StatusOrder", "start"],
