--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Consult/Consult.cshtml
@@ -419,7 +419,7 @@
         <div class="c-modal__action">
             <div class="l-action l-action--inline">
                 <div class="l-action__item">
-                    <a class="o-btn o-btn--primary o-btn--sm" data-edit>確定</a>
+                    <a class="o-btn o-btn--primary o-btn--sm" data-edit data-popup-close="true">確定</a>
                 </div>
             </div>
         </div>
