Update : 修復大小版印PDF時內容跑版問題

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/MemberCalculationList/MemberCalculationList.cshtml
@@ -201,29 +201,34 @@
                             if ($(window).width() < 768) {
                                 $('#resultContent').css('padding-bottom', '10px');
 
-                                var ContentTotalWidth = $('ul.c-pipeList.s3.t-bold').width();
+                                $('#downloadPdf .downloadPdf_Wrap').each(function (index) {
+                                    var $pipeList = $(this).find('ul.c-pipeList.s3.t-bold');
+                                    var ContentTotalWidth = $pipeList.width();
 
-                                var contentWidth1 = ContentTotalWidth - 90 - 18;
-                                $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(0).find('span').eq(0).css('width', '90px');
-                                $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(0).find('span').eq(1).css('width', contentWidth1 + 'px');
+                                    if ($pipeList.length) {
+                                        var contentWidth1 = ContentTotalWidth - 90 - 18;
+                                        $pipeList.find('.c-pipeList__item').eq(0).find('span').eq(0).css('width', '90px');
+                                        $pipeList.find('.c-pipeList__item').eq(0).find('span').eq(1).css('width', contentWidth1 + 'px');
 
-                                var contentWidth2 = ContentTotalWidth - 72 - 18;
-                                $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(1).find('span').eq(0).css('width', '72px');
-                                $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(1).find('span').eq(1).css('width', contentWidth2 + 'px');
+                                        var contentWidth2 = ContentTotalWidth - 72 - 18;
+                                        $pipeList.find('.c-pipeList__item').eq(1).find('span').eq(0).css('width', '72px');
+                                        $pipeList.find('.c-pipeList__item').eq(1).find('span').eq(1).css('width', contentWidth2 + 'px');
 
-                                var contentWidth3 = ContentTotalWidth - 90 - 18;
-                                $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(2).find('span').eq(0).css('width', '90px');
-                                $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(2).find('span').eq(1).css('width', contentWidth3 + 'px');
+                                        var contentWidth3 = ContentTotalWidth - 90 - 18;
+                                        $pipeList.find('.c-pipeList__item').eq(2).find('span').eq(0).css('width', '90px');
+                                        $pipeList.find('.c-pipeList__item').eq(2).find('span').eq(1).css('width', contentWidth3 + 'px');
 
-                                if (type != 'RetirementPreparationList') {
-                                    var contentWidth4 = ContentTotalWidth - 36 - 18;
-                                    $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(3).find('span').eq(0).css('width', '36px');
-                                    $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(3).find('span').eq(1).css('width', contentWidth4 + 'px');
-                                } else {
-                                    var contentWidth4 = ContentTotalWidth - 126 - 18;
-                                    $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(3).find('span').eq(0).css('width', '126px');
-                                    $('ul.c-pipeList.s3.t-bold').find('.c-pipeList__item').eq(3).find('span').eq(1).css('width', contentWidth4 + 'px');
-                                }
+                                        if (type != 'RetirementPreparationList') {
+                                            var contentWidth4 = ContentTotalWidth - 36 - 18;
+                                            $pipeList.find('.c-pipeList__item').eq(3).find('span').eq(0).css('width', '36px');
+                                            $pipeList.find('.c-pipeList__item').eq(3).find('span').eq(1).css('width', contentWidth4 + 'px');
+                                        } else {
+                                            var contentWidth4 = ContentTotalWidth - 126 - 18;
+                                            $pipeList.find('.c-pipeList__item').eq(3).find('span').eq(0).css('width', '126px');
+                                            $pipeList.find('.c-pipeList__item').eq(3).find('span').eq(1).css('width', contentWidth4 + 'px');
+                                        }
+                                    }
+                                });
 
                                 generateMBPDF(type, 1.3);
                             } else {
