--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/Bond.cshtml
@@ -551,7 +551,13 @@
                 幣別
                 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
             </div>
-            <div class="c-cardTable__content"><a href="#popupCurrencyWebSite" class="o-link" data-popup="true"><%= CurrencyName %></a></div>
+            <div class="c-cardTable__content">
+                <% if (CurrencyName == "無幣別") { %>
+                    <span>-</span>
+                <% } else { %>
+                    <a href="#popupCurrencyWebSite" class="o-link" data-popup="true"><%= CurrencyName %></a>
+                <% } %>                
+            </div>
         </td>
         <td class="c-cardTable__body" data-card-table-width="1/2">
             <div class="c-cardTable__title" data-length="4">票面利率</div>
@@ -570,7 +576,7 @@
         <td class="c-cardTable__body" data-card-table-width="1/2">
             <div class="c-cardTable__title" data-length="4">殖利率</div>
             <div class="c-cardTable__content">
-                <% if (typeof InterestRate == "number" && !isNaN(YieldRateYTM)) { %>
+                <% if (typeof YieldRateYTM == "number" && !isNaN(YieldRateYTM)) { %>
                     <span><%= YieldRateYTM.toFixed(2) %>%</span>
                 <% } else { %>
                     <span>-</span>
