--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/Bond/BondDetail.cshtml
@@ -44,7 +44,16 @@
                                 <div class="l-detailInfo__item">
                                     <div class="c-numerical">
                                         <div class="c-numerical__title u-left@dt-only"><span>計價幣別</span></div>
-                                        <div class="c-numerical__content c-numerical__content--xl u-left@dt-only"><span>@Model.BondDetail.CurrencyName</span></div>
+                                        <div class="c-numerical__content c-numerical__content--xl u-left@dt-only">
+                                            @if(Model.BondDetail.CurrencyName == "無幣別")
+                                            {
+                                                <span>-</span>
+                                            }
+                                            else
+                                            {
+                                                <span>@Model.BondDetail.CurrencyName</span>
+                                            }    
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="l-detailInfo__item">
