全產品搜尋－國外債券 BondList 幣別代碼對應不到幣別總表時，以 '-' 顯示

--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SearchResult/_ForeignBondResultTemplate.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/SiteProductSearch/SearchResult/_ForeignBondResultTemplate.cshtml
@@ -33,7 +33,11 @@
                 <a href="#popupCurrency" class="o-icon o-icon--tip o-icon--xs" data-popup="true"></a>
             </div>
             <div class="c-cardTable__content">
+                <% if (CurrencyName == "無幣別") { %>
+                <span>-</span>
+                <% } else { %>
                 <%= CurrencyHtml %>
+                <% } %>
             </div>
         </td>
         @*【票面利率】*@
